--- a/package.json
+++ b/package.json
@@ -31,22 +31,22 @@
         "@ionic-native/sqlite": "^4.7.0",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "^2.0.1",
-        "cordova-android": "7.0.0",
+        "cordova-android": "^6.0.0",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-camera": "^4.0.2",
-        "cordova-plugin-camera-preview": "~0.9.0",
+        "cordova-plugin-camera": "^4.0.3",
+        "cordova-plugin-camera-preview": "^0.9.0",
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-datepicker": "^0.9.3",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-geolocation": "^2.4.3",
-        "cordova-plugin-googlemaps": "^2.2.9",
+        "cordova-plugin-googlemaps": "^2.3.3",
         "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git#2.6.0",
-        "cordova-plugin-ionic-webview": "^1.1.16",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "^2.2.1",
+        "cordova-plugin-ionic-webview": "^1.2.1",
+        "cordova-plugin-splashscreen": "^4.1.0",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.3.1",
         "ion": "^0.9.14",
         "ionic-angular": "3.8.0",
         "ionic-plugin-keyboard": "^2.2.1",
